welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: value lenght is not a member of Array[Int]
  var T=nums.lenght-2
             ^array123:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 0 to T){
         ^